--- a/quickstarter_xgboost.ipynb
+++ b/quickstarter_xgboost.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![xalpa.png](attachment:384fd85e-856c-4864-b120-cadc095f7874.png)"
+    "![xalpa.png](attachment:384fd85e-856c-4864-b120-cadc095f7874.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](https://github.com/crunchdao/quant-venture-capital-resources/assets/39467268/5d51b530-06bc-4b76-9c9a-180b28bd7295)\n"
    ]
   },
   {
